# gRPC_policy

./: .gitignore  README.md
server/: Cargo.toml  build.rs
server/src/: main.rs
verdict/: Cargo.toml  build.rs
verdict/proto/: configureprovider.proto
verdict/src/: ddd.txt  main.rs
