[package]
name = "verdict"
version = "0.0.1"
authors = ["EmisonLu <luzhenghao.lzh@linux.alibaba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]] # Bin to run the HelloWorld gRPC server
# name = "helloworld-server"
# path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "verdict"
path = "src/main.rs"

[dependencies]
tonic = "0.5"
clap = "2.33.3"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "*"

[build-dependencies]
tonic-build = "0.5"